--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TripDataAdd"
-            android:label="Create New Trip" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".ActivityTripDetails"></activity>
+        <activity
+            android:name=".TripDataAdd"
+            android:label="Create New Trip"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
