start play Store

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityTripDetails"
-            android:label="Your Trip Details"
-            android:parentActivityName=".MainActivity"
-            ></activity>
+        <activity android:name=".ActivityAddExpense"
+            android:label="Add Expense"
+            android:launchMode = "singleInstance"
+            android:parentActivityName=".ActivityTripDetails"></activity>
+        <activity
+            android:name=".ActivityTripDetails"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".TripDataAdd"
             android:label="Create New Trip"
